--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <h4>FROM DESPICABLE ME</h4>
 
           <!-- Level 2 'HAPPY' Header -->
-          <h2>HAPPY</h2>
+          <h1>HAPPY</h1>
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-          <h4>FROM DESPICABLE ME</h4>
+          <h4>| FROM DESPICABLE ME |</h4>
         </div>
       </div>
 
